# termgrid

./: .gitignore  CHANGELOG.md  LICENSE  README.md
documentation/: CONTRIBUTING.md  HOW_IT_WORKS.md  TROUBLESHOOTING.md  USER_GUIDE.md
src/: app.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/styles/: main.css  terminal.css
